# palm_kb_rs

./: Cargo.toml  README.md  get_keys.py  hid_keycodes_data.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
kb_driver/: Cargo.toml  build.rs
kb_driver/src/: handlers.rs  key_codes.rs  lib.rs  main.rs
kb_driver/src/palm_kb/: matrix.rs  mod.rs  state.rs
kb_driver_proc_macro/: Cargo.toml
kb_driver_proc_macro/src/: lib.rs
