[package]
edition = "2021"
name = "kb_driver"
version = "0.1.0"
authors = ["Juliapixel <89038897+Juliapixel@users.noreply.github.com>"]
resolver = "2"

[dependencies]
kb_driver_proc_macro = { path = "../kb_driver_proc_macro" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-4096", "arch-cortex-m", "executor-thread", "integrated-timers", "executor-interrupt"] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "time", "exti" ] }

usbd-hid = "0.7"
bitflags = "2.5.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }

[features]
defmt = [
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-executor/defmt",
    "embassy-usb/defmt",
    "panic-probe/print-defmt"
]
